[package]
name = "comprust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bitvec = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.202"
serde_json = "1.0.117"
